--- a/css/main-RTL.css
+++ b/css/main-RTL.css
@@ -3362,11 +3362,11 @@ body.rounded-btns .read-more {
 .our-clients .logo {
   /* max-height: 125px; */
   border-radius: 0.25rem;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
 }
-.our-clients .logo:hover {
+/* .our-clients .logo:hover {
   filter: grayscale(0);
-}
+} */
 .our-clients-blocks {
   background: var(--clr-semi-dark-blue);
 }
@@ -3771,6 +3771,7 @@ body.rounded-btns .read-more {
   padding-bottom: 0;
 }
 .contact-info-card .icon {
+  height: 32px;
   font-size: 1.5rem;
   width: 1.5rem;
   text-align: center;
@@ -3789,6 +3790,11 @@ body.rounded-btns .read-more {
 .contact-info-card .info:hover {
   color: var(--clr-main);
   transform: translateX(-0.25rem);
+}
+
+.contact-info-card .info.centered {
+  display: flex;
+  align-items: center;
 }
 
 .footer-menu {
